--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 <div class="white-box">
 	
     <div class="inner-box">
-	<img src="../Pictures/yes.png" alt="location" class="box-image">
+	<img src="yes.png" alt="location" class="box-image">
     <h3 class="box-heading">Location</h3>
 	<p class="box-text">As one of the best golf courses in the Middle East, this experience will undoubtedly exceed your expectations</p>
   </div>
